@@ -58,17 +58,19 @@ int VpnConfig::fromMap (const QVariantMap &vm)
 {
     LIBENCLOUD_TRACE;
 
-    _host = vm["ip"].toString();
-    LIBENCLOUD_ERR_IF (_host.isEmpty());
+    _data.clear();
 
-    _port = vm["port"].toInt();
-    LIBENCLOUD_ERR_IF (_port <= 0);
+    LIBENCLOUD_ERR_IF (!vm.contains("ip"));
+    _data["remote"] << vm["ip"].toString();
 
-    _proto = vm["proto"].toString();
-    LIBENCLOUD_ERR_IF (_proto.isEmpty());
+    LIBENCLOUD_ERR_IF (!vm.contains("port"));
+    _data["port"] << vm["port"].toString();
 
-    _type = vm["type"].toString();
-    LIBENCLOUD_ERR_IF (_type.isEmpty());
+    LIBENCLOUD_ERR_IF (!vm.contains("proto"));
+    _data["proto"] << vm["proto"].toString();
+
+    LIBENCLOUD_ERR_IF (!vm.contains("type"));
+    _data["dev"] << vm["type"].toString();
 
     _valid = true;
     return 0;
@@ -92,26 +94,16 @@ int VpnConfig::fromCfg (Config *cfg)
     if (cfg == NULL)
         return 0;
     
-    _caPath = cfg->config.sslOp.caPath.absoluteFilePath();
-    _certPath = cfg->config.sslOp.certPath.absoluteFilePath();
-    _keyPath = cfg->config.sslOp.keyPath.absoluteFilePath();
+    _data["ca"].clear();
+    _data["ca"] << cfg->config.sslOp.caPath.absoluteFilePath();
+
+    _data["cert"].clear();
+    _data["cert"] << cfg->config.sslOp.certPath.absoluteFilePath();
+
+    _data["key"].clear();
+    _data["key"] << cfg->config.sslOp.keyPath.absoluteFilePath();
 
     return 0;
-}
-
-void VpnConfig::setCaPath (const QString &path)
-{
-    _caPath = path;
-}
-
-void VpnConfig::setCertPath (const QString &path)
-{
-    _certPath = path;
-}
-
-void VpnConfig::setKeyPath (const QString &path)
-{
-    _keyPath = path;
 }
 
 QString VpnConfig::toString () const
@@ -119,16 +111,46 @@ QString VpnConfig::toString () const
     QString s;
     QTextStream out(&s);
 
-    out << "mode: " << _mode << ", ";
-    out << "host: " << _host << ", ";
-    out << "port: " << QString::number(_port) << ", ";
-    out << "proto: " << _proto << ", ";
-    out << "type: " << _type << ", ";
-    out << "caPath: " << _caPath << ", ";
-    out << "certPath: " << _certPath << ", ";
-    out << "keyPath: " << _keyPath;
+    if (_data.contains("client"))
+        out << "client: yes, ";
+    out << "remote: " << _data["remote"].join(" ") << ", ";
+    out << "port: " << _data["port"].join(" ") << ", ";
+    out << "proto: " << _data["proto"].join(" ") << ", ";
+    out << "type: " << _data["dev"].join(" ") << ", ";
+    out << "caPath: " << _data["ca"].join(" ") << ", ";
+    out << "certPath: " << _data["cert"].join(" ") << ", ";
+    out << "keyPath: " << _data["key"].join(" ");
 
     return s;
+}
+
+int VpnConfig::fromFile (const QString &path)
+{
+    QByteArray ba;
+    QFile f(path);
+
+    LIBENCLOUD_ERR_IF (!f.open(QIODevice::ReadOnly));
+    LIBENCLOUD_ERR_IF ((ba = f.readAll()).isEmpty());
+
+    foreach (QString line, ba.split('\n')) 
+    {
+        QStringList params = line.split(QRegExp("\\s"));
+
+        if (params.count() < 1)
+            continue;
+
+        QString key = params[0];
+        params.removeFirst();
+
+        _data[key] = params;
+    }
+
+    f.close();
+
+    return 0;
+err:
+    f.close();
+    return ~0;
 }
 
 int VpnConfig::toFile (const QString &path) const
@@ -144,19 +166,20 @@ int VpnConfig::toFile (const QString &path) const
     {
         QTextStream out(&s);
 
-        out << _mode << endl;
-        out << "remote" << ' ' << _host << endl;
-        out << "port" << ' ' << QString::number(_port) << endl;
-        if (_proto != "null")
-            out << "proto" << ' ' << _proto << endl;
-        if (_type != "null")
-            out << "dev" << ' ' << _type << endl;
-        if (_caPath != "")
-            out << "ca" << ' ' << '"' << _caPath << '"' << endl;
-        if (_certPath != "")
-            out << "cert" << ' ' << '"' << _certPath << '"' << endl;
-        if (_keyPath != "")
-            out << "key" << ' ' << '"' << _keyPath << '"' << endl;
+        if (_data.contains("client"))
+            out << "client" << endl;
+        out << "remote" << ' ' << _data["remote"].join(" ") << endl;
+        out << "port" << ' ' << _data["port"][0] << endl;
+        if (_data.contains("proto"))
+            out << "proto" << ' ' << _data["proto"][0] << endl;
+        if (_data.contains("dev"))
+            out << "dev" << ' ' << _data["dev"][0] << endl;
+        if (_data.contains("ca"))
+            out << "ca" << ' ' << '"' << _data["ca"][0] << '"' << endl;
+        if (_data.contains("cert"))
+            out << "cert" << ' ' << '"' << _data["cert"][0] << '"' << endl;
+        if (_data.contains("key"))
+            out << "key" << ' ' << '"' << _data["key"][0] << '"' << endl;
     }
 
     LIBENCLOUD_ERR_IF (!configFile.open(QIODevice::WriteOnly));
@@ -169,13 +192,21 @@ err:
     return ~0;
 }
 
+QStringList VpnConfig::get (const QString &key) const
+{
+    if (!_data.contains(key))
+        return QStringList();
+
+    return _data[key];
+}
+
 //
 // private methods
 //
 
 int VpnConfig::init ()
 {
-    _mode = "client";
+    _data["client"] = QStringList();
 
     return 0;
 }
